--- a/gdl_apps/EMOCA/emoca_conf/model/settings/coarse_train_expdeca_emonet.yaml
+++ b/gdl_apps/EMOCA/emoca_conf/model/settings/coarse_train_expdeca_emonet.yaml
@@ -21,13 +21,17 @@ resume_training: False # this loads a pretrained model
 useSeg: true
 background_from_input: true
 use_landmarks: True
+use_mediapipe_landmarks: False
 useWlmk: True
 #useWlmk: False
 lmk_weight: 1
+lmk_weight_mp: 1
 #eyed: 1.0
 #lipd: 0.1
 eyed: 0.5
 lipd: 0.5
+eyed_mp: 0.5
+lipd_mp: 0.5
 #idw: 0.15 # from Yao's code
 idw: 0.2 # value written in the paper
 exp_reg: 1e-4
