--- a/gdl_apps/EMOCA/emoca_conf/model/settings/detail_train_expdeca_emonet.yaml
+++ b/gdl_apps/EMOCA/emoca_conf/model/settings/detail_train_expdeca_emonet.yaml
@@ -36,6 +36,7 @@ mode: detail
 resume_training: False # this loads a pretrained model
 
 lmk_weight: 1
+lmk_weight_mp: 1
 #eyed: 1.0 # used only when train_coarse is true
 #lipd: 0.1 # used only when train_coarse is true
 
