--- a/gdl_apps/EMOCA/emoca_conf/model/additional/lipread_loss.yaml
+++ b/gdl_apps/EMOCA/emoca_conf/model/additional/lipread_loss.yaml
@@ -4,7 +4,8 @@ lipread_loss:
   # path: /ps/scratch/rdanecek/emoca/emodeca/2021_09_02_20-39-05_EmoCnn_vgg19_bn_none_AU_Aug_early # bgg19 with BN, binary cross entropy loss
 #  path: /ps/scratch/rdanecek/emoca/emodeca/2021_09_02_20-39-05_EmoCnn_vgg19_bn_none_AU_Aug_early
   # feat_loss: l1_loss
-  lipread_loss: l1_loss
+  # lipread_loss: l1_loss
+  lipread_loss: cosine_similarity
 
   # normalize_features: false
   # trainable: false
