Add the possibility to regularize emoca expression and jaw to deca predictions.

--- a/gdl_apps/EMOCA/emoca_conf/model/additional/lipread_loss.yaml
+++ b/gdl_apps/EMOCA/emoca_conf/model/additional/lipread_loss.yaml
@@ -6,6 +6,7 @@ lipread_loss:
   # feat_loss: l1_loss
   # lipread_loss: l1_loss
   lipread_loss: cosine_similarity
+  # lipread_loss: mse_loss
 
   # normalize_features: false
   # trainable: false
