Add the metric configurability to faceformer lip reading loss. Fix typos. Prepare the submission script for next round of experiments with lip reading loss

--- a/gdl_apps/TalkingHead/talkinghead_conf/learning/losses/lip_masked.yaml
+++ b/gdl_apps/TalkingHead/talkinghead_conf/learning/losses/lip_masked.yaml
@@ -2,6 +2,9 @@
 losses:
 
   lip_reading_loss:
+    metric: cosine_similarity
+    # metric: l1_loss
+    # metric: mse_loss
     # weight: 10.0 
     # weight: 1.0
     # weight: 0.1
