--- a/gdl_apps/TalkingHead/talkinghead_conf/learning/losses/vertices_emo_lip_masked_exchange.yaml
+++ b/gdl_apps/TalkingHead/talkinghead_conf/learning/losses/vertices_emo_lip_masked_exchange.yaml
@@ -47,6 +47,9 @@ losses:
     apply_on_disentangled: True
 
   lip_reading_loss:
+    metric: cosine_similarity
+    # metric: l1_loss
+    # metric: mse_loss
     # weight: 10.0 
     # weight: 1.0
     # weight: 0.1
