--- a/gdl_apps/TalkingHead/talkinghead_conf/data/datasets/mead_pseudo_gt.yaml
+++ b/gdl_apps/TalkingHead/talkinghead_conf/data/datasets/mead_pseudo_gt.yaml
@@ -80,8 +80,8 @@ read_video: False
 # read_video: True
 # reconstruction_type: spectre
 # reconstruction_type: emoca
-reconstruction_type: [spectre, emoca] # if more, the first one is primary
-# reconstruction_type: [emoca, spectre]
+# reconstruction_type: [spectre, emoca] # if more, the first one is primary
+reconstruction_type: [emoca, spectre]
 
 return_global_pose: False
 # return_appearance: False
