--- a/gdl_apps/TalkingHead/talkinghead_conf/learning/losses/emo_masked.yaml
+++ b/gdl_apps/TalkingHead/talkinghead_conf/learning/losses/emo_masked.yaml
@@ -25,6 +25,9 @@ metrics:
     mask_invalid: mediapipe_landmarks # frames with invalid mediapipe landmarks will be masked for loss computation
 
   lip_reading_loss:
+    metric: cosine_similarity
+    # metric: l1_loss
+    # metric: mse_loss
     # weight: 10.0 
     weight: 1.0
     # weight: 0.1
