--- a/gdl_apps/VideoEmotionRecognition/videoemorec_conf/videoemorec_transformer.yaml
+++ b/gdl_apps/VideoEmotionRecognition/videoemorec_conf/videoemorec_transformer.yaml
@@ -2,7 +2,7 @@ defaults:
   - data/datasets: vocaset
   - data/augmentations: none
   # - model/paths : cluster
-  - model/settings : most_frequent_emo
+  - model/settings : videoemorec
   - model/output@model/output : basic_expressions
   # - model/sizes@model/sizes : default
   # - model/neural_rendering : none
@@ -13,9 +13,9 @@ defaults:
   # - model/audio@model/audio: hubert
   # - model/face@model/face: flame
   # - model/face@model/face: full_space
-  # - model/sequence_encoder@model/sequence_encoder: transformer_classifier
-  # - model/classification_head@model/classification_head: linear
-  - model/feature_extractor@model/feature_extractor: none
+  - model/sequence_encoder@model/sequence_encoder: transformer_classifier
+  - model/classification_head@model/classification_head: linear
+  - model/feature_extractor@model/feature_extractor: wav2vec2_resampled_trainable_wild
   ## - model/output@model/output: exp_jaw
   # # - model/output@model/output: vertices
   - learning/losses: cross_entropy
