Incorporate video emotion classifier as a loss into TalkingHead

--- a/gdl_apps/TalkingHead/talkinghead_conf/data/datasets/mead_pseudo_gt.yaml
+++ b/gdl_apps/TalkingHead/talkinghead_conf/data/datasets/mead_pseudo_gt.yaml
@@ -92,4 +92,5 @@ average_shape_decode: True
 
 
 emotion_type: resnet50
-return_emotion_feature: False
+# return_emotion_feature: False
+return_emotion_feature: True
