Submission script for video emotion optimization

--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,4 @@ assets/
 
 # cluster submission (user-specific settings)
 gdl_apps/TalkingHead/training/submission_settings.yaml
+gdl_apps/TalkingHead/optimization/submission_settings.yaml
