--- a/gdl_apps/VideoEmotionRecognition/videoemorec_conf/videoemorec_transformer.yaml
+++ b/gdl_apps/VideoEmotionRecognition/videoemorec_conf/videoemorec_transformer.yaml
@@ -15,7 +15,7 @@ defaults:
   # - model/face@model/face: full_space
   - model/sequence_encoder@model/sequence_encoder: transformer_classifier
   - model/classification_head@model/classification_head: linear
-  - model/feature_extractor@model/feature_extractor: wav2vec2_resampled_trainable_wild
+  - model/feature_extractor@model/feature_extractor: none
   ## - model/output@model/output: exp_jaw
   # # - model/output@model/output: vertices
   - learning/losses: cross_entropy
