--- a/gdl_apps/MotionPrior/motion_prior_conf/model/sizes/l2l_sizes.yaml
+++ b/gdl_apps/MotionPrior/motion_prior_conf/model/sizes/l2l_sizes.yaml
@@ -1,4 +1,4 @@
 # @package model
-quant_sequence_length: 4
-sequence_length: 32 # to be passed from data
+sequence_length: todo # to be passed from data
+quant_sequence_length: todo # to be computed from data upon instantiation
 quant_factor: 3 # number of times the sequence get halved. so the quant_sequence_length == sequence_length / (2^quant_factor)
