Adding test rendering to motion prior trainings.

--- a/gdl_apps/MotionPrior/motion_prior_conf/learning/losses/l2l_vqvae_geometry.yaml
+++ b/gdl_apps/MotionPrior/motion_prior_conf/learning/losses/l2l_vqvae_geometry.yaml
@@ -3,6 +3,8 @@ losses:
   
   geometry_reconstruction:
     weight: 1.
+    # weight: 1000.
+    # weight: 1000000.
     input_key: gt_vertices 
     output_key: reconstructed_vertices
     metric: mse_loss
