--- a/gdl_apps/MotionPrior/motion_prior_conf/model/settings/l2l_settings.yaml
+++ b/gdl_apps/MotionPrior/motion_prior_conf/model/settings/l2l_settings.yaml
@@ -1,6 +1,7 @@
 # @package model
 pl_module_class: L2lVqVae
-max_epochs: 300
+# max_epochs: 300
+max_epochs: 600
 
 rotation_representation: aa
 sequence_componets: 
