--- a/gdl_apps/MotionPrior/motion_prior_conf/learning/losses/l2l_vqvae_geometry.yaml
+++ b/gdl_apps/MotionPrior/motion_prior_conf/learning/losses/l2l_vqvae_geometry.yaml
@@ -2,9 +2,14 @@
 losses:
   
   geometry_reconstruction:
-    weight: 1.
+    # weight: 1.
+    # weight: 10.
+    # weight: 100.
     # weight: 1000.
-    # weight: 1000000.
+    # weight: 10000.
+    # weight: 100000.
+    weight: 1000000.
+    # weight: 10000000.
     input_key: gt_vertices 
     output_key: reconstructed_vertices
     metric: mse_loss
@@ -38,3 +43,4 @@ metrics:
     output_key: decoded_sequence
     metric: mse_loss
     # mask_invalid: mediapipe_landmarks # frames with invalid mediapipe landmarks will be masked for loss computation
+P
