Update motion prior configs.

--- a/gdl_apps/MotionPrior/motion_prior_conf/model/settings/l2l_settings.yaml
+++ b/gdl_apps/MotionPrior/motion_prior_conf/model/settings/l2l_settings.yaml
@@ -1,7 +1,8 @@
 # @package model
 pl_module_class: L2lVqVae
 # max_epochs: 300
-max_epochs: 600
+# max_epochs: 600
+max_epochs: 1200
 
 rotation_representation: aa
 sequence_componets: 
