--- a/gdl_apps/MotionPrior/motion_prior_conf/model/sizes/l2l_sizes.yaml
+++ b/gdl_apps/MotionPrior/motion_prior_conf/model/sizes/l2l_sizes.yaml
@@ -2,3 +2,7 @@
 sequence_length: todo # to be passed from data
 quant_sequence_length: todo # to be computed from data upon instantiation
 quant_factor: 3 # number of times the sequence get halved. so the quant_sequence_length == sequence_length / (2^quant_factor)
+# quant_factor: 0
+# quant_factor: 1 
+# quant_factor: 2 
+# quant_factor: 4 
