--- a/gdl_apps/MotionPrior/motion_prior_conf/learning/losses/l2l_vqvae_geometry.yaml
+++ b/gdl_apps/MotionPrior/motion_prior_conf/learning/losses/l2l_vqvae_geometry.yaml
@@ -16,9 +16,22 @@ losses:
 
   codebook_alignment: 
     weight: 0.25 # this is the beta in l2l VQ-VAE formulation
+    # weight: 0.125 
+    # weight: 0.025 
+    # weight: 0.0125 
+    # weight: 0.0025 
+    # weight: 0.00125 
+    # weight: 0.00025 
+    # weight: 0.000125 
 
   codebook_commitment: 
     weight: 1.0
+    # weight: 0.5
+    # weight: 0.1
+    # weight: 0.05
+    # weight: 0.01
+    # weight: 0.005
+    # weight: 0.001
   
 metrics: 
   perplexity: 
