--- a/gdl_apps/MotionPrior/motion_prior_conf/learning/losses/vae_geometry.yaml
+++ b/gdl_apps/MotionPrior/motion_prior_conf/learning/losses/vae_geometry.yaml
@@ -17,7 +17,11 @@ losses:
   kl_divergence: 
     # weight: 1.0
     # weight: 0.5
-    weight: 0.1
+    # weight: 0.1
+    # weight: 0.05
+    # weight: 0.01
+    # weight: 0.005
+    weight: 0.001
   
 metrics: 
 
