--- a/conda-environment_py38_cu11_ubuntu.yml
+++ b/conda-environment_py38_cu11_ubuntu.yml
@@ -18,11 +18,12 @@ dependencies:
   - ninja=1.10.2
   - notebook=6.3.0
   - numba>=0.52.0
-  - pandas>=1.1.5
+  - pandas>=1.4.2
   - pip>=21.2.4
   - python=3.8
   # - pytorch=1.9.1=py3.8_cuda11.1_cudnn8.0.5_0
-  - pytorch=1.10.2=py3.8_cuda11.3_cudnn8.2.0_0
+  # - pytorch=1.10.2=py3.8_cuda11.3_cudnn8.2.0_0
+  - pytorch=1.12.1=py3.8_cuda11.3_cudnn8.3.2_0
   - torchvision=0.11.3
   - torchaudio=0.10.2
   - pywavelets>=1.1.1
