--- a/requirements38.txt
+++ b/requirements38.txt
@@ -32,7 +32,7 @@ matplotlib~=3.3.4
 memory-profiler~=0.58.0
 mmcv~=1.2.2
 munch~=2.5.0
-numpy~=1.19.5
+numpy>=1.23.1
 omegaconf~=2.0.6
 onnx~=1.10.2
 onnxruntime-gpu~=1.9.0
@@ -72,4 +72,4 @@ plotly==5.8.0
 librosa==0.9.2
 h5py==3.7.0
 hickle==5.0.2
-# pytorch3d @ git+https://github.com/facebookresearch/pytorch3d.git@v0.6.0
+# pytorch3d @ git+https://github.com/facebookresearch/pytorch3d.git@v0.6.2
