--- a/gdl_apps/MotionPrior/motion_prior_conf/learning/losses/dvae_geometry.yaml
+++ b/gdl_apps/MotionPrior/motion_prior_conf/learning/losses/dvae_geometry.yaml
@@ -21,7 +21,14 @@ losses:
     # weight: 0.05
     # weight: 0.01
     # weight: 0.05
-    weight: 0.005
+    # weight: 0.005
+    # weight: 0.001
+    # weight: 0.0005
+    # weight: 0.0001
+    # weight: 0.00005
+    # weight: 0.00001
+    # weight: 0.000005
+    weight: 0.000001
   
 metrics: 
   perplexity: 
