--- a/gdl_apps/MotionPrior/motion_prior_conf/data/datasets/mead_pseudo_gt.yaml
+++ b/gdl_apps/MotionPrior/motion_prior_conf/data/datasets/mead_pseudo_gt.yaml
@@ -81,7 +81,15 @@ test_subjects: []
 read_video: False
 # read_video: True
 # reconstruction_type: spectre
-reconstruction_type: emoca
+# reconstruction_type: emoca
+# reconstruction_type: [spectre, emoca] # if more, the first one is primary
+# reconstruction_type: [emoca, spectre]
+# reconstruction_type: [EMOCA_v2_lr_mse_20_with_bfmtex, spectre]
+## reconstruction_type: [EMOCA_v2_lr_mse_15_with_bfmtex, spectre]
+# reconstruction_type: [EMOCA_v2_lr_cos_1.5_with_bfmtex, spectre]
+## reconstruction_type: [EMOCA_v2_mp_with_bfmtex, spectre]
+# reconstruction_type: EMOCA_v2_lr_mse_15_with_bfmtex
+reconstruction_type: EMOCA_v2_mp_with_bfmtex
 
 return_global_pose: False
 # return_appearance: False
@@ -90,4 +98,5 @@ average_shape_decode: True
 
 
 emotion_type: resnet50
-return_emotion_feature: true
+# return_emotion_feature: False
+return_emotion_feature: True
