--- a/gdl_apps/MotionPrior/motion_prior_conf/learning/losses/vae_geometry.yaml
+++ b/gdl_apps/MotionPrior/motion_prior_conf/learning/losses/vae_geometry.yaml
@@ -19,9 +19,9 @@ losses:
     # weight: 0.5
     # weight: 0.1
     # weight: 0.05
-    # weight: 0.01
-    # weight: 0.005
-    weight: 0.001
+    # weight: 0.01 #ok reconstructions on vocaset
+    # weight: 0.005 #ok reconstructions on vocaset
+    weight: 0.001 #ok reconstructions on vocaset
   
 metrics: 
 
