Update install related to the EMOCA 2.0 release

--- a/requirements38.txt
+++ b/requirements38.txt
@@ -30,13 +30,15 @@ keras-preprocessing~=1.1.2
 kornia~=0.6.1
 matplotlib~=3.3.4
 memory-profiler~=0.58.0
-mmcv~=1.2.2
+# mmcv~=1.2.2
+mmcv-full~=1.5.0
 munch~=2.5.0
 numpy>=1.23.1
 omegaconf~=2.0.6
 onnx~=1.10.2
 onnxruntime-gpu~=1.9.0
-opencv-python~=4.5.1.48
+# opencv-python~=4.5.1.48
+opencv-python~=4.5.5
 opencv-python-headless~=4.5.3.56
 opt-einsum~=3.3.0
 pathtools~=0.1.2
