--- a/gdl_apps/MotionPrior/motion_prior_conf/data/datasets/mead_pseudo_gt.yaml
+++ b/gdl_apps/MotionPrior/motion_prior_conf/data/datasets/mead_pseudo_gt.yaml
@@ -88,8 +88,8 @@ read_video: False
 ## reconstruction_type: [EMOCA_v2_lr_mse_15_with_bfmtex, spectre]
 # reconstruction_type: [EMOCA_v2_lr_cos_1.5_with_bfmtex, spectre]
 ## reconstruction_type: [EMOCA_v2_mp_with_bfmtex, spectre]
-# reconstruction_type: EMOCA_v2_lr_mse_15_with_bfmtex
-reconstruction_type: EMOCA_v2_mp_with_bfmtex
+reconstruction_type: EMOCA_v2_lr_mse_15_with_bfmtex
+# reconstruction_type: EMOCA_v2_mp_with_bfmtex
 
 return_global_pose: False
 # return_appearance: False
