--- a/gdl_apps/MotionPrior/motion_prior_conf/data/datasets/mead_pseudo_gt.yaml
+++ b/gdl_apps/MotionPrior/motion_prior_conf/data/datasets/mead_pseudo_gt.yaml
@@ -16,8 +16,8 @@ face_detector_threshold: 0.05
 
 include_processed_audio: False
 include_raw_audio: True
-preload_videos: False
-# preload_videos: True
+# preload_videos: False
+preload_videos: True
 inflate_by_video_size: False
 
 ring_type: none
