--- a/gdl_apps/TalkingHead/talkinghead_conf/learning/batching/default.yaml
+++ b/gdl_apps/TalkingHead/talkinghead_conf/learning/batching/default.yaml
@@ -11,5 +11,5 @@ batch_size_test: 1
 #K_policy: sequential
 num_gpus: 1
 gpu_memory_min_gb: 24
-gpu_memory_max_gb: 38
+# gpu_memory_max_gb: 48
 log_every_n_steps: 50
