Add early stopping by default to vide emotion recognition

--- a/gdl_apps/VideoEmotionRecognition/videoemorec_conf/videoemorec_gru.yaml
+++ b/gdl_apps/VideoEmotionRecognition/videoemorec_conf/videoemorec_gru.yaml
@@ -22,8 +22,8 @@ defaults:
   - learning/optimizer: adam
   # - learning/batching@learning/batching: default
   - learning/batching@learning/batching: fixed_length
-  # - learning/callbacks: early_stopping
-  - learning/callbacks: none
+  # - learning/callbacks: none
+  - learning/callbacks: early_stopping
   - learning/logging: wandb
   # - learning/logging: none
   - inout: cluster
