Incorporate and adapt implementation of DeepPhase by Starke et al. Runs but no idea if works.

--- a/gdl_apps/MotionPrior/motion_prior_conf/data/datasets/vocaset.yaml
+++ b/gdl_apps/MotionPrior/motion_prior_conf/data/datasets/vocaset.yaml
@@ -3,8 +3,8 @@ data_class: FaceformerVocasetDM
 input_dir: /is/cluster/rdanecek/workspace/repos/FaceFormer/vocaset
 # output_dir: 
 # processed_subfolder: 
-# num_workers: 0 # debug
-num_workers: 1 # 
+num_workers: 0 # debug
+# num_workers: 1 # 
 
 train_subjects: 
   - FaceTalk_170728_03272_TA 
