Add the possibility to return the input going into the prior and compute regularizer over it.

--- a/gdl_apps/TalkingHead/talkinghead_conf/bertprior_wild.yaml
+++ b/gdl_apps/TalkingHead/talkinghead_conf/bertprior_wild.yaml
@@ -19,7 +19,7 @@ defaults:
   - model/output@model/output: exp_jaw
   # - model/output@model/output: vertices
   # - learning/losses: vertices
-  - learning/losses: vertices_masked
+  - learning/losses: vertices_masked_motion_prior
   - learning/optimizer: adam
   # - learning/batching@learning/batching: default
   - learning/batching@learning/batching: fixed_length
