--- a/gdl_apps/TalkingHead/talkinghead_conf/bertprior_wild_videmo.yaml
+++ b/gdl_apps/TalkingHead/talkinghead_conf/bertprior_wild_videmo.yaml
@@ -20,7 +20,7 @@ defaults:
   # - model/output@model/output: vertices
   - model/renderer@model/renderer: fixed_view_mouth
   # - learning/losses: vertices
-  - learning/losses: vertices_emovid_metric
+  - learning/losses: vertices_emovid_metric_motion_prior
   - learning/optimizer: adam
   # - learning/batching@learning/batching: default
   - learning/batching@learning/batching: fixed_length
