--- a/gdl_apps/TalkingHead/talkinghead_conf/learning/losses/vertices_motion_prior.yaml
+++ b/gdl_apps/TalkingHead/talkinghead_conf/learning/losses/vertices_motion_prior.yaml
@@ -4,25 +4,25 @@ losses:
     weight: 1.
     metric: l2
 
-  motion_prior_gaussian_reg: 
-    # weight: 1000.
-    # weight: 100.
-    # weight: 10.
-    # weight: 0.1
-    # weight: 0.01
-    # weight: 0.001
-    # weight: 0.0001
-    # weight: 0.00001
-    # weight: 0.000001
-    # weight: 0.0000001
-    weight: 0.00000001
-    # weight: 0.000000001
+  # motion_prior_gaussian_reg: 
+  #   # weight: 1000.
+  #   # weight: 100.
+  #   # weight: 10.
+  #   # weight: 0.1
+  #   # weight: 0.01
+  #   # weight: 0.001
+  #   # weight: 0.0001
+  #   # weight: 0.00001
+  #   # weight: 0.000001
+  #   # weight: 0.0000001
+  #   weight: 0.00000001
+  #   # weight: 0.000000001
 
 
 metrics: 
 
-  # motion_prior_gaussian_reg: 
-    # weight: 1.
+  motion_prior_gaussian_reg: 
+    weight: 1.
 
   expression_reg: 
     weight: 0.0001
