Lots of configs for the ablations of bertprior plus perceptual losses.

--- a/gdl_apps/TalkingHead/talkinghead_conf/bertprior_wild_rendering_ex.yaml
+++ b/gdl_apps/TalkingHead/talkinghead_conf/bertprior_wild_rendering_ex.yaml
@@ -8,6 +8,7 @@ defaults:
   # - model/flame_tex: bfm_desktop
   # - model/audio@model/audio: avhubert
   # - model/audio@model/audio: wav2vec2
+  - model/preprocessor@model.preprocessor : flame_tex
   - model/audio@model/audio: wav2vec2_resampled_trainable_wild 
   # - model/audio@model/audio: wav2vec2_resampled_nontrainable_wild
   # - model/audio@model/audio: hubert
