--- a/gdl_apps/TalkingHead/talkinghead_conf/learning/batching/fixed_length_bs2.yaml
+++ b/gdl_apps/TalkingHead/talkinghead_conf/learning/batching/fixed_length_bs2.yaml
@@ -4,9 +4,18 @@
 # sequence_length_val: 100
 # sequence_length_test: 100
 
-sequence_length_train: 70
-sequence_length_val: 70
-sequence_length_test: 70
+# sequence_length_train: 70
+# sequence_length_val: 70
+# sequence_length_test: 70
+
+# sequence_length_train: 32
+# sequence_length_val: 32
+# sequence_length_test: 32
+
+sequence_length_train: 16
+sequence_length_val: 16
+sequence_length_test: 16
+
 
 # sequence_length_train: 20
 # sequence_length_val: 20
