--- a/gdl_apps/TalkingHead/talkinghead_conf/learning/losses/vertices_emo_masked_motion_prior_only.yaml
+++ b/gdl_apps/TalkingHead/talkinghead_conf/learning/losses/vertices_emo_masked_motion_prior_only.yaml
@@ -20,7 +20,7 @@ losses:
     emo_feat_loss: masked_mse_loss
     trainable: false 
     normalize_features: false 
-    target_method_image: emoca
+    target_method_image: EMOCA_v2_lr_mse_15_with_bfmtex
     mask_invalid: mediapipe_landmarks # frames with invalid mediapipe landmarks will be masked for loss computation
 
 
@@ -29,7 +29,7 @@ metrics:
   expression_reg: 
     # weight: 0.0001 # too strong 
     weight: 1.e-9
-    
+
   vertex_loss:
     weight: 1.
     metric: l2
@@ -49,7 +49,7 @@ metrics:
     # emo_feat_loss: mse_loss
     trainable: false 
     normalize_features: false 
-    target_method_image: spectre # trying to make lips behave as spectre
+    target_method_image: EMOCA_v2_lr_mse_15_with_bfmtex # trying to make lips behave as spectre
     mask_invalid: mediapipe_landmarks # frames with invalid mediapipe landmarks will be masked for loss computation
 
   exp_loss: 
