--- a/gdl_apps/TalkingHead/talkinghead_conf/learning/losses/emovid_lip_masked_exchange_motion_prior.yaml
+++ b/gdl_apps/TalkingHead/talkinghead_conf/learning/losses/emovid_lip_masked_exchange_motion_prior.yaml
@@ -45,7 +45,9 @@ losses:
     # affectnet-trained resnet used also in EMOCA
     feature_extractor_path: /is/cluster/work/rdanecek/emoca/emodeca/2021_11_09_05-15-38_-8198495972451127810_EmoCnn_resnet50_shake_samp-balanced_expr_Aug_early
 
-    metric: masked_mse_loss
+    # metric: masked_mse_loss
+    metric: cosine_similarity
+
     trainable: false 
     normalize_features: false 
     # target_method_image: emoca # trying to make emotion behave as emoca
@@ -71,16 +73,32 @@ losses:
     # network_path: /is/cluster/work/rdanecek/video_emotion_recognition/trainings/2023_01_09_12-42-15_7763968562013076567_VideoEmotionClassifier_MEADP_TSC_PE_Lnce
     
     # mead, identity split, transformer 1, alibi, 128 dim
-    network_path: /is/cluster/work/rdanecek/video_emotion_recognition/trainings/2023_02_20_15-33-33_6438932288293748658_VideoEmotionClassifier_MEADP__TSC_NPE_Lnce
+    # network_path: /is/cluster/work/rdanecek/video_emotion_recognition/trainings/2023_02_20_15-33-33_6438932288293748658_VideoEmotionClassifier_MEADP__TSC_NPE_Lnce
 
     # # mead, identity split, transformer 1, alibi, 64 dim
     # network_path: /is/cluster/work/rdanecek/video_emotion_recognition/trainings/2023_02_20_15-33-16_-7404140082760850826_VideoEmotionClassifier_MEADP__TSC_NPE_Lnce
+
+    # # mead, sequence split, transformer 4, alibi, 512 dim
+    # network_path: /is/cluster/work/rdanecek/video_emotion_recognition/trainings/2023_02_24_18-15-33_-4018761067550400346_VideoEmotionClassifier_MEADP__TSC_NPE_Lnce_early
+
+    # # mead, sequence split, transformer 1, alibi, 512 dim
+    network_path: /is/cluster/work/rdanecek/video_emotion_recognition/trainings/2023_02_24_17-26-04_2542903326241699279_VideoEmotionClassifier_MEADP__TSC_NPE_Lnce_early
+
+    # # mead, sequence split, transformer 1, alibi, 256 dim
+    # network_path: /is/cluster/work/rdanecek/video_emotion_recognition/trainings/2023_02_24_17-25-44_-9109157203859697132_VideoEmotionClassifier_MEADP__TSC_NPE_Lnce_early
+
+    # # mead, sequence split, transformer 1, alibi, 128 dim
+    # network_path: /is/cluster/work/rdanecek/video_emotion_recognition/trainings/2023_02_24_17-25-08_8040047884583005506_VideoEmotionClassifier_MEADP__TSC_NPE_Lnce_early
+
+    # # mead, sequence split, transformer 1, alibi, 64 dim
+    # network_path: /is/cluster/work/rdanecek/video_emotion_recognition/trainings/2023_02_24_17-25-21_7058628279281220579_VideoEmotionClassifier_MEADP__TSC_NPE_Lnce_early
 
     # affectnet-trained resnet used also in EMOCA
     feature_extractor_path: /is/cluster/work/rdanecek/emoca/emodeca/2021_11_09_05-15-38_-8198495972451127810_EmoCnn_resnet50_shake_samp-balanced_expr_Aug_early
     
 
-    metric: masked_mse_loss
+    # metric: masked_mse_loss
+    metric: cosine_similarity
     trainable: false 
     normalize_features: false 
     # target_method_image: emoca # trying to make emotion behave as emoca
@@ -91,9 +109,9 @@ losses:
     apply_on_disentangled: True
 
   lip_reading_loss:
-    # metric: cosine_similarity
+    metric: cosine_similarity
     # metric: l1_loss
-    metric: mse_loss
+    # metric: mse_loss
     # weight: 10.0 
     # weight: 1.0
     # weight: 0.1
@@ -113,9 +131,9 @@ losses:
     mask_invalid: mediapipe_landmarks # frames with invalid mediapipe landmarks will be masked for loss computation
 
   lip_reading_loss_disentangled:
-    # metric: cosine_similarity
+    metric: cosine_similarity
     # metric: l1_loss
-    metric: mse_loss
+    # metric: mse_loss
     # weight: 10.0 
     # weight: 1.0
     # weight: 0.1
