--- a/gdl_apps/TalkingHead/talkinghead_conf/learning/losses/vertices_lip_masked_motion_prior_only.yaml
+++ b/gdl_apps/TalkingHead/talkinghead_conf/learning/losses/vertices_lip_masked_motion_prior_only.yaml
@@ -2,9 +2,9 @@
 losses:
 
   lip_reading_loss:
-    # metric: cosine_similarity
+    metric: cosine_similarity
     # metric: l1_loss
-    metric: mse_loss
+    # metric: mse_loss
     # weight: 10.0 
     # weight: 1.0
     # weight: 0.1
