--- a/gdl_apps/EMOCA/emoca_conf/model/settings/coarse_train_edeca.yaml
+++ b/gdl_apps/EMOCA/emoca_conf/model/settings/coarse_train_edeca.yaml
@@ -8,7 +8,8 @@ deca_class: EDECA
 #expression_backbone: emonet_trainable
 #expression_backbone: emonet_static
 
-mica_model_path: 'assets/MICA/model/mica.tar'
+# mica_model_path: 'assets/MICA/model/mica.tar'
+mica_model_path: 'MICA/model/mica.tar'
 # mica_preprocessing: none
 mica_preprocessing: ported_insightface
 # mica_preprocessing: default
