--- a/gdl_apps/EMOCA/emoca_conf/data/datasets/coarse_data_cluster.yaml
+++ b/gdl_apps/EMOCA/emoca_conf/data/datasets/coarse_data_cluster.yaml
@@ -27,4 +27,6 @@ n_train: 10000000
 #split_ratio: 0.8
 split_ratio: 0.9
 split_style: random
-num_workers: 4
+# num_workers: 4
+# num_workers: 12
+num_workers: 24
