--- a/gdl_apps/EMOCA/emoca_conf/model/settings/detail_train_emica.yaml
+++ b/gdl_apps/EMOCA/emoca_conf/model/settings/detail_train_emica.yaml
@@ -1,6 +1,6 @@
 # @package model
 
-deca_class: EMICA
+deca_class: ExpMICA
 #expression_backbone: deca_parallel
 expression_backbone: deca_clone
 #expression_backbone: emonet_trainable
