--- a/gdl_apps/EMOCA/emoca_conf/model/settings/detail_train_emica_v2_emonet_lip_mediapipe.yaml
+++ b/gdl_apps/EMOCA/emoca_conf/model/settings/detail_train_emica_v2_emonet_lip_mediapipe.yaml
@@ -1,6 +1,6 @@
 # @package model
 
-deca_class: EMICA_v2
+deca_class: EMICA
 # expression_backbone: deca_parallel
 expression_backbone: deca_clone
 #expression_backbone: emonet_trainable
