--- a/gdl_apps/MotionPrior/motion_prior_conf/data/datasets/mead_pseudo_gt.yaml
+++ b/gdl_apps/MotionPrior/motion_prior_conf/data/datasets/mead_pseudo_gt.yaml
@@ -18,8 +18,8 @@ face_detector_threshold: 0.05
 
 include_processed_audio: False
 include_raw_audio: True
-# preload_videos: False
-preload_videos: True
+preload_videos: False
+# preload_videos: True
 inflate_by_video_size: False
 
 ring_type: none
@@ -91,10 +91,11 @@ read_audio: False
 ## reconstruction_type: [EMOCA_v2_lr_mse_15_with_bfmtex, spectre]
 # reconstruction_type: [EMOCA_v2_lr_cos_1.5_with_bfmtex, spectre]
 ## reconstruction_type: [EMOCA_v2_mp_with_bfmtex, spectre]
-reconstruction_type: EMOCA_v2_lr_mse_15_with_bfmtex
+# reconstruction_type: EMOCA_v2_lr_mse_15_with_bfmtex
 # reconstruction_type: EMOCA_v2_mp_with_bfmtex
 # reconstruction_type: EMOCA_v2_lr_cos_1.5_with_bfmtex
 # reconstruction_type: EMOCA_v2_lr_mse_20_with_bfmtex
+reconstruction_type: EMICA_v0_mp_lr_mse_15
 
 return_global_pose: False
 # return_appearance: False
