--- a/gdl_apps/EMOCA/emoca_conf/model/settings/detail_train_emica_emonet.yaml
+++ b/gdl_apps/EMOCA/emoca_conf/model/settings/detail_train_emica_emonet.yaml
@@ -6,7 +6,7 @@ expression_backbone: deca_clone
 #expression_backbone: emonet_trainable
 #expression_backbone: emonet_static
 
-mica_model_path: 'assets/MICA/model/mica.tar'
+mica_model_path: 'MICA/model/mica.tar'
 # mica_preprocessing: none
 mica_preprocessing: ported_insightface
 # mica_preprocessing: default
