--- a/gdl_apps/TalkingHead/talkinghead_conf/learning/losses/vertices_emovid_lip_masked_exchange.yaml
+++ b/gdl_apps/TalkingHead/talkinghead_conf/learning/losses/vertices_emovid_lip_masked_exchange.yaml
@@ -47,6 +47,9 @@ losses:
 
     # affectnet-trained resnet used also in EMOCA
     feature_extractor_path: /is/cluster/work/rdanecek/emoca/emodeca/2021_11_09_05-15-38_-8198495972451127810_EmoCnn_resnet50_shake_samp-balanced_expr_Aug_early
+    
+    use_real_video: False
+    # use_real_video: True
 
     metric: masked_mse_loss
     trainable: false 
@@ -100,6 +103,8 @@ losses:
     # affectnet-trained resnet used also in EMOCA
     feature_extractor_path: /is/cluster/work/rdanecek/emoca/emodeca/2021_11_09_05-15-38_-8198495972451127810_EmoCnn_resnet50_shake_samp-balanced_expr_Aug_early
     
+    use_real_video: False
+    # use_real_video: True
 
     metric: masked_mse_loss
     trainable: false 
