--- a/gdl_apps/TalkingHead/talkinghead_conf/learning/losses/vertices_lip_masked_motion_prior.yaml
+++ b/gdl_apps/TalkingHead/talkinghead_conf/learning/losses/vertices_lip_masked_motion_prior.yaml
@@ -62,6 +62,9 @@ metrics:
     # affectnet-trained resnet used also in EMOCA
     feature_extractor_path: /is/cluster/work/rdanecek/emoca/emodeca/2021_11_09_05-15-38_-8198495972451127810_EmoCnn_resnet50_shake_samp-balanced_expr_Aug_early
 
+    use_real_video: False
+    # use_real_video: True
+
     metric: masked_mse_loss
     trainable: false 
     normalize_features: false 
