Update metrics to cosine similarity for emotion and lip reading losses

--- a/gdl_apps/TalkingHead/talkinghead_conf/learning/losses/vertices_emo_lip_masked_exchange.yaml
+++ b/gdl_apps/TalkingHead/talkinghead_conf/learning/losses/vertices_emo_lip_masked_exchange.yaml
@@ -89,6 +89,8 @@ losses:
     # emo_feat_loss: mse_loss
     trainable: false 
     normalize_features: false 
+    
+    metric: cosine_similarity
     # target_method_image: spectre # trying to make lips behave as spectre
     # target_method_image: EMOCA_v2_lr_mse_20_with_bfmtex 
     target_method_image: EMOCA_v2_lr_mse_15_with_bfmtex 
