--- a/gdl_apps/TalkingHead/talkinghead_conf/learning/losses/vertices_emovid_masked_motion_prior_only.yaml
+++ b/gdl_apps/TalkingHead/talkinghead_conf/learning/losses/vertices_emovid_masked_motion_prior_only.yaml
@@ -58,9 +58,9 @@ losses:
 metrics: 
 
   lip_reading_loss:
-    # metric: cosine_similarity
+    metric: cosine_similarity
     # metric: l1_loss
-    metric: mse_loss
+    # metric: mse_loss
     # weight: 10.0 
     # weight: 1.0
     # weight: 0.1
