--- a/gdl_apps/TalkingHead/talkinghead_conf/learning/losses/vertices_emo_lip_masked_exchange_motion_prior.yaml
+++ b/gdl_apps/TalkingHead/talkinghead_conf/learning/losses/vertices_emo_lip_masked_exchange_motion_prior.yaml
@@ -55,9 +55,9 @@ losses:
     apply_on_disentangled: True
 
   lip_reading_loss:
-    # metric: cosine_similarity
+    metric: cosine_similarity
     # metric: l1_loss
-    metric: mse_loss
+    # metric: mse_loss
     # weight: 10.0 
     # weight: 1.0
     # weight: 0.1
@@ -77,9 +77,9 @@ losses:
     mask_invalid: mediapipe_landmarks # frames with invalid mediapipe landmarks will be masked for loss computation
 
   lip_reading_loss_disentangled:
-    # metric: cosine_similarity
+    metric: cosine_similarity
     # metric: l1_loss
-    metric: mse_loss
+    # metric: mse_loss
     # weight: 10.0 
     # weight: 1.0
     # weight: 0.1
