--- a/gdl_apps/TalkingHead/talkinghead_conf/learning/losses/vertices_emo_masked_motion_prior.yaml
+++ b/gdl_apps/TalkingHead/talkinghead_conf/learning/losses/vertices_emo_masked_motion_prior.yaml
@@ -21,7 +21,8 @@ losses:
     # weight: 0.0
     network_path: /is/cluster/work/rdanecek/emoca/emodeca/2021_11_09_05-15-38_-8198495972451127810_EmoCnn_resnet50_shake_samp-balanced_expr_Aug_early
     # emo_feat_loss: mse_loss
-    emo_feat_loss: masked_mse_loss
+    # emo_feat_loss: masked_mse_loss
+    metric: cosine_similarity
     trainable: false 
     normalize_features: false 
     target_method_image: EMOCA_v2_lr_mse_15_with_bfmtex
@@ -46,7 +47,9 @@ metrics:
     weight: 0.00001
     # emo_feat_loss: mse_loss
     trainable: false 
-    normalize_features: false 
+    normalize_features: false
+    
+    metric: cosine_similarity 
     target_method_image: EMOCA_v2_lr_mse_15_with_bfmtex # trying to make lips behave as spectre
     mask_invalid: mediapipe_landmarks # frames with invalid mediapipe landmarks will be masked for loss computation
 
