--- a/gdl_apps/TalkingHead/talkinghead_conf/learning/losses/vertices_emo_masked_motion_prior_only.yaml
+++ b/gdl_apps/TalkingHead/talkinghead_conf/learning/losses/vertices_emo_masked_motion_prior_only.yaml
@@ -49,6 +49,7 @@ metrics:
     # emo_feat_loss: mse_loss
     trainable: false 
     normalize_features: false 
+    metric: cosine_similarity
     target_method_image: EMOCA_v2_lr_mse_15_with_bfmtex # trying to make lips behave as spectre
     mask_invalid: mediapipe_landmarks # frames with invalid mediapipe landmarks will be masked for loss computation
 
