--- a/gdl_apps/TalkingHead/talkinghead_conf/learning/losses/vertices_emovid_lip_masked_exchange.yaml
+++ b/gdl_apps/TalkingHead/talkinghead_conf/learning/losses/vertices_emovid_lip_masked_exchange.yaml
@@ -51,7 +51,8 @@ losses:
     use_real_video_for_reference: False
     # use_real_video_for_reference: True
 
-    metric: masked_mse_loss
+    # metric: masked_mse_loss
+    metric: cosine_similarity
     trainable: false 
     normalize_features: false 
     # target_method_image: emoca # trying to make emotion behave as emoca
@@ -106,7 +107,8 @@ losses:
     use_real_video_for_reference: False
     # use_real_video_for_reference: True
 
-    metric: masked_mse_loss
+    # metric: masked_mse_loss
+    metric: cosine_similarity
     trainable: false 
     normalize_features: false 
     # target_method_image: emoca # trying to make emotion behave as emoca
@@ -117,9 +119,9 @@ losses:
     apply_on_disentangled: True
 
   lip_reading_loss:
-    # metric: cosine_similarity
+    metric: cosine_similarity
     # metric: l1_loss
-    metric: mse_loss
+    # metric: mse_loss
     # weight: 10.0 
     # weight: 1.0
     # weight: 0.1
@@ -139,9 +141,9 @@ losses:
     mask_invalid: mediapipe_landmarks # frames with invalid mediapipe landmarks will be masked for loss computation
 
   lip_reading_loss_disentangled:
-    # metric: cosine_similarity
+    metric: cosine_similarity
     # metric: l1_loss
-    metric: mse_loss
+    # metric: mse_loss
     # weight: 10.0 
     # weight: 1.0
     # weight: 0.1
