--- a/gdl_apps/TalkingHead/talkinghead_conf/learning/losses/vertices_emovid_masked_motion_prior.yaml
+++ b/gdl_apps/TalkingHead/talkinghead_conf/learning/losses/vertices_emovid_masked_motion_prior.yaml
@@ -49,7 +49,8 @@ losses:
     # affectnet-trained resnet used also in EMOCA
     feature_extractor_path: /is/cluster/work/rdanecek/emoca/emodeca/2021_11_09_05-15-38_-8198495972451127810_EmoCnn_resnet50_shake_samp-balanced_expr_Aug_early
 
-    metric: masked_mse_loss
+    # metric: masked_mse_loss
+    metric: cosine_similarity
     trainable: false 
     normalize_features: false 
     # target_method_image: emoca # trying to make emotion behave as emoca
