--- a/gdl_apps/TalkingHead/talkinghead_conf/learning/losses/vertices_emovid_metric_motion_prior.yaml
+++ b/gdl_apps/TalkingHead/talkinghead_conf/learning/losses/vertices_emovid_metric_motion_prior.yaml
@@ -83,7 +83,8 @@ metrics:
     # affectnet-trained resnet used also in EMOCA
     feature_extractor_path: /is/cluster/work/rdanecek/emoca/emodeca/2021_11_09_05-15-38_-8198495972451127810_EmoCnn_resnet50_shake_samp-balanced_expr_Aug_early
 
-    metric: masked_mse_loss
+    # metric: masked_mse_loss
+    metric: cosine_similarity
     trainable: false 
     normalize_features: false 
     # target_method_image: emoca # trying to make emotion behave as emoca
@@ -94,9 +95,9 @@ metrics:
   
 
   lip_reading_loss:
-    # metric: cosine_similarity
+    metric: cosine_similarity
     # metric: l1_loss
-    metric: mse_loss
+    # metric: mse_loss
     # weight: 10.0 
     weight: 1.0
     # weight: 0.1
