--- a/gdl_apps/TalkingHead/talkinghead_conf/bertprior_wild_rendering_ex_vid_noverts.yaml
+++ b/gdl_apps/TalkingHead/talkinghead_conf/bertprior_wild_rendering_ex_vid_noverts.yaml
@@ -16,7 +16,8 @@ defaults:
   # - model/face@model/face: full_space
   # - model/settings: faceformer
   - model/settings: condition_exchange
-  - model/sequence_encoder@model/sequence_encoder: linear
+  # - model/sequence_encoder@model/sequence_encoder: linear 
+  - model/sequence_encoder@model/sequence_encoder: linear_bertprior
   - model/sequence_decoder@model/sequence_decoder: bertprior_wild
   - model/renderer@model/renderer: fixed_view_mouth
   - model/output@model/output: exp_jaw
