--- a/gdl_apps/TalkingHead/talkinghead_conf/bertprior_wild_videmo.yaml
+++ b/gdl_apps/TalkingHead/talkinghead_conf/bertprior_wild_videmo.yaml
@@ -14,7 +14,8 @@ defaults:
   # - model/face@model/face: flame
   # - model/face@model/face: full_space
   - model/settings: faceformer
-  - model/sequence_encoder@model/sequence_encoder: linear
+  # - model/sequence_encoder@model/sequence_encoder: linear 
+  - model/sequence_encoder@model/sequence_encoder: linear_bertprior
   - model/sequence_decoder@model/sequence_decoder: bertprior_wild_videmo
   - model/output@model/output: exp_jaw
   # - model/output@model/output: vertices
