--- a/gdl_apps/TalkingHead/talkinghead_conf/model/audio/wav2vec2_resampled_trainable_wild.yaml
+++ b/gdl_apps/TalkingHead/talkinghead_conf/model/audio/wav2vec2_resampled_trainable_wild.yaml
@@ -2,6 +2,7 @@
 type: wav2vec2
 model_specifier: "facebook/wav2vec2-base-960h" 
 trainable: true
+# trainable: false
 with_processor: true
 model_expected_fps: 50
 target_fps: 25
